--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajax</title>
+    <link rel="icon" href="./images/procurando.png">
+    <title>CEP Find</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 </head>
+
 <body>
     <div class="container">
         <form>
@@ -46,8 +49,9 @@
             <button type="submit" class="btn btn-success">Enviar pedido</button>
         </form>
     </div>
-    <script src="./jquery.js"></script>
-    <script src="./jquery.mask.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./scripts/jquery.js"></script>
+    <script src="./scripts/jquery.mask.min.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
+
 </html>
